--- a/app/src/main/res/navigation/nav_main.xml
+++ b/app/src/main/res/navigation/nav_main.xml
@@ -11,6 +11,8 @@
 
     <include app:graph="@navigation/nav_residents" />
 
+    <include app:graph="@navigation/nav_payments" />
+
     <fragment
         android:id="@+id/screen_menu"
         android:label="@string/title_menu"
@@ -25,6 +27,9 @@
 
         <action android:id="@+id/action_menu_to_residents"
             app:destination="@id/nav_residents" />
+
+        <action android:id="@+id/action_menu_to_payments"
+            app:destination="@id/nav_payments" />
 
     </fragment>
 
