--- a/app/src/main/res/navigation/nav_rooms.xml
+++ b/app/src/main/res/navigation/nav_rooms.xml
@@ -5,7 +5,7 @@
     android:id="@+id/nav_rooms"
     app:startDestination="@id/screen_rooms_list">
 
-    <include app:graph="@navigation/nav_rents" />
+    <include app:graph="@navigation/nav_rentals" />
 
     <fragment
         android:id="@+id/screen_rooms_list"
@@ -22,7 +22,7 @@
             app:destination="@id/screen_modify_room" />
 
         <action android:id="@+id/action_rooms_list_to_room_tenants"
-            app:destination="@id/nav_rents">
+            app:destination="@id/nav_rentals">
 
             <argument
                 android:name="params"
