--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -27,7 +27,7 @@
         android:text="@string/app_name" />
 
     <com.google.android.material.textfield.TextInputLayout
-        style="@style/InputLayout.Filled"
+        style="@style/InputLayout.Stroke"
         android:id="@+id/layoutInputLogin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -49,7 +49,7 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
-        style="@style/InputLayout.Filled"
+        style="@style/InputLayout.Stroke"
         android:id="@+id/layoutInputPassword"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -57,7 +57,8 @@
         android:layout_marginStart="24dp"
         android:layout_marginEnd="24dp"
         android:hint="@string/title_password"
-        app:errorEnabled="true">
+        app:errorEnabled="true"
+        app:endIconMode="password_toggle">
 
         <com.google.android.material.textfield.TextInputEditText
             style="@style/Input.InLayout"
