Fix login, add manager password

--- a/app/src/main/res/layout/fragment_manager_modify.xml
+++ b/app/src/main/res/layout/fragment_manager_modify.xml
@@ -87,6 +87,27 @@
                 android:layout_height="wrap_content"
                 android:inputType="textEmailAddress"
                 android:imeOptions="actionNext"
+                android:nextFocusDown="@id/inputPassword" />
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            style="@style/InputLayout.Stroke"
+            android:id="@+id/layoutInputPassword"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:hint="@string/hint_manager_password"
+            app:errorEnabled="true"
+            app:endIconMode="password_toggle">
+
+            <com.google.android.material.textfield.TextInputEditText
+                style="@style/Input.InLayout.Stroke"
+                android:id="@+id/inputPassword"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textPassword"
+                android:imeOptions="actionNext"
                 android:nextFocusDown="@id/inputDescription" />
 
         </com.google.android.material.textfield.TextInputLayout>
