--- a/app/src/main/res/navigation/nav_main.xml
+++ b/app/src/main/res/navigation/nav_main.xml
@@ -7,6 +7,8 @@
 
     <include app:graph="@navigation/nav_buildings" />
 
+    <include app:graph="@navigation/nav_rooms" />
+
     <include app:graph="@navigation/nav_managers" />
 
     <include app:graph="@navigation/nav_residents" />
@@ -19,16 +21,30 @@
         android:name="com.flaringapp.coursework2021.presentation.features.menu.MenuFragment"
         tools:layout="@layout/fragment_menu">
 
-        <action android:id="@+id/action_menu_to_buildings"
+        <action
+            android:id="@+id/action_menu_to_buildings"
             app:destination="@id/nav_buildings" />
 
-        <action android:id="@+id/action_menu_to_managers"
+        <action
+            android:id="@+id/action_menu_to_rooms"
+            app:destination="@id/nav_rooms">
+
+            <argument
+                android:name="building_id"
+                app:argType="string" />
+
+        </action>
+
+        <action
+            android:id="@+id/action_menu_to_managers"
             app:destination="@id/nav_managers" />
 
-        <action android:id="@+id/action_menu_to_residents"
+        <action
+            android:id="@+id/action_menu_to_residents"
             app:destination="@id/nav_residents" />
 
-        <action android:id="@+id/action_menu_to_payments"
+        <action
+            android:id="@+id/action_menu_to_payments"
             app:destination="@id/nav_payments" />
 
     </fragment>
