--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -43,6 +43,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textEmailAddress"
+            android:maxLength="255"
             android:imeOptions="actionNext"
             android:nextFocusDown="@id/inputPassword" />
 
@@ -65,6 +66,7 @@
             android:id="@+id/inputPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:maxLength="255"
             android:inputType="textPassword"
             android:imeOptions="actionDone" />
 
