--- a/app/src/main/res/layout/fragment_manager_modify.xml
+++ b/app/src/main/res/layout/fragment_manager_modify.xml
@@ -44,6 +44,7 @@
                     android:inputType="textPersonName"
                     android:imeOptions="actionNext"
                     android:nextFocusDown="@id/inputSurname"
+                    android:maxLength="1024"
                     tools:text="Manager name" />
 
             </com.google.android.material.textfield.TextInputLayout>
@@ -65,6 +66,7 @@
                     android:inputType="textPersonName"
                     android:imeOptions="actionNext"
                     android:nextFocusDown="@id/inputEmail"
+                    android:maxLength="1024"
                     tools:text="Manager surname" />
 
             </com.google.android.material.textfield.TextInputLayout>
@@ -86,6 +88,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textEmailAddress"
+                android:maxLength="255"
                 android:imeOptions="actionNext"
                 android:nextFocusDown="@id/inputPassword" />
 
@@ -107,6 +110,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textPassword"
+                android:maxLength="64"
                 android:imeOptions="actionNext"
                 android:nextFocusDown="@id/inputDescription" />
 
@@ -119,7 +123,9 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:hint="@string/hint_manager_description"
-            app:errorEnabled="true">
+            app:errorEnabled="true"
+            app:counterEnabled="true"
+            app:counterMaxLength="255">
 
             <com.google.android.material.textfield.TextInputEditText
                 style="@style/Input.InLayout.Stroke"
@@ -128,6 +134,7 @@
                 android:layout_height="wrap_content"
                 android:inputType="textMultiLine|textCapSentences"
                 android:lines="2"
+                android:maxLength="255"
                 android:imeOptions="actionNext"
                 android:nextFocusDown="@id/inputBuilding"
                 tools:text="Manager description" />
